Add last edited date

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a href="/blog/A2A.html"><p>From Angels to the Apocalypse</p></a>
     </div>
     <div class="footer">
-      <p id="foot">Made by Kyle Liao</p>
+      <p id="foot">Made by Kyle Liao | Last Edited 5/25/24</p>
       <a href="old/index.html">Old</a>
     </div>
 
