--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <p>Socials are @thekyleliao</p>
       </section>
     </section>
+    <div class="picture_container">
+      <img class="hero_image" src="images/kyle.jpg" alt="Kyle Liao" />
+    </div>
     <div class="container">
       <p>
         I'm from NYC, and I have a passion for building, learning, and
