Add accomplishments, projects, and index page content.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,72 @@
         things, in cool places, with cool people.
       </p>
     </div>
+    <div class="container-vertical">
+      <h2>working on!</h2>
+      <ul>
+        <li>HATM: Hack at the Museum!</li>
+        <li>Trail: PCB Hiking Alarm Badges</li>
+        <li>[Redacted]: edu-tech solution</li>
+        <li>HATM: Tour Guide Robot</li>
+        <li>SkillsUSA Quiz Bowl Nationals: Go New York!</li>
+      </ul>
+    </div>
+    <div class="container-vertical">
+      <h2>certifications</h2>
+      <ul>
+        <li>
+          <a
+            href="https://www.credly.com/badges/e79b104f-257c-42cb-bcb8-3b94333470e8"
+            >CompTia Security+</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.credly.com/earner/earned/badge/11e92c70-8b2e-4e16-b9de-bb1aa85ba1ba"
+            >Cisco CCST Cybersecurity</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.credly.com/earner/earned/badge/abd96737-465b-4346-b2d6-b496ecd0889d"
+            >Pearson ITS Cybersecurity</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.credly.com/badges/b760fbb3-29f8-492d-a0b9-f79a91e11094"
+          ></a
+          >Pearson ITS Network Security
+        </li>
+      </ul>
+    </div>
+    <div class="container-vertical">
+      <h2>languages [Duolingo Fanatic, 800+ days]</h2>
+      <ul>
+        <li>Mandarin</li>
+        <li>Spanish</li>
+        <li>French</li>
+      </ul>
+    </div>
+    <div class="container-vertical">
+      <h2>school</h2>
+      <ul>
+        <li>FYE at Purdue</li>
+        <li>Army ROTC: Boiler Up!</li>
+      </ul>
+    </div>
     <div class="container">
+      <h2>extra extra:</h2>
+      <b><a href="/accomplishments.html">accomplishments</a></b>
+      <b><a href="/projects.html">projects</a></b>
+    </div>
+
+    <div class="container">
+      <h2>Writing</h2>
       <a href="/blog/A2A.html"><p>From Angels to the Apocalypse</p></a>
     </div>
     <div class="footer">
-      <p id="foot">Made by Kyle Liao | Last Edited 5/25/24</p>
+      <p id="foot">Made by Kyle Liao | Last Edited 6/6/24</p>
       <a href="old/index.html">Old</a>
     </div>
 
