Add sources of projects

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,10 @@
           >Kyle's Motivational Soundboard</a
         >
       </ul>
-      <p>Will add, categorize, and order projects soon.</p>
+      <p>
+        Will add, categorize, and order projects soon. Check devpost, github,
+        and replit.
+      </p>
     </div>
   </body>
 </html>
