Make November edits for text content

--- a/accomplishments.html
+++ b/accomplishments.html
@@ -30,6 +30,7 @@
       <ul>
         <li>1st Place at NYC SkillsUSA Conference for Quiz Bowl</li>
         <li>1st Place at NYS SkillsUSA Conference for Quiz Bowl</li>
+        <li>4th Place at 2024 SkillsUSA National Conference for Quiz Bowl</li>
       </ul>
     </div>
     <div class="container-vertical">
@@ -47,6 +48,8 @@
         <li>former Intern: Liberatory Learners</li>
         <li>former volunteer: ENGin</li>
       </ul>
+      <br><br>
+      <a href = "/site">Home</a>
     </div>
   </body>
 </html>
