--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
       <h2>working on!</h2>
       <ul>
         <li>HATM: Hack at the Museum!</li>
-        <li>Trail: PCB Hiking Alarm Badges</li>
-        <li>[Redacted]: edu-tech solution</li>
-        <li>HATM: Tour Guide Robot</li>
-        <li>SkillsUSA Quiz Bowl Nationals: Go New York!</li>
+        <li>Looking for my next side project ;/</li>
       </ul>
     </div>
     <div class="container-vertical">
@@ -67,11 +64,12 @@
       </ul>
     </div>
     <div class="container-vertical">
-      <h2>languages [Duolingo Fanatic, 800+ days]</h2>
+      <h2>languages [Duolingo Fanatic, 900+ days]</h2>
       <ul>
         <li>Mandarin</li>
         <li>Spanish</li>
         <li>French</li>
+        <li>Russian</li>
       </ul>
     </div>
     <div class="container-vertical">
@@ -83,8 +81,8 @@
     </div>
     <div class="container">
       <h2>extra extra:</h2>
-      <b><a href="/accomplishments.html">accomplishments</a></b>
-      <b><a href="/projects.html">projects</a></b>
+      <b><a href="/site/accomplishments.html">accomplishments</a></b>
+      <b><a href="/site/projects.html">projects</a></b>
     </div>
 
     <div class="container">
@@ -92,7 +90,7 @@
       <a href="/blog/A2A.html"><p>From Angels to the Apocalypse</p></a>
     </div>
     <div class="footer">
-      <p id="foot">Made by Kyle Liao | Last Edited 6/6/24</p>
+      <p id="foot">Made by Kyle Liao | Last Edited 11/1/24</p>
       <a href="old/index.html">Old</a>
     </div>
 
