--- a/projects.html
+++ b/projects.html
@@ -10,33 +10,12 @@
   <body>
     <div class="container-vertical">
       <h2>projects</h2>
-      <ul>
-        <li>
-          <a
-            href="https://github.com/hackclub/the-trail/tree/main/equipment/Hiking%20Alarm"
-            >Trail PCB: Creating a badge/hiking alarm</a
-          >
-        </li>
-        <li>
-          <a href="https://github.com/thekyleliao/wonderland_gemini"
-            >Gemini Game: Alice in Wonderland</a
-          >
-        </li>
-      </ul>
-      <ul>
-        <a href="https://replit.com/@KyleLiao/LegraTest#index.html"
-          >Lego Picture Memory Buildplate</a
-        >
-      </ul>
-      <ul>
-        <a href="https://replit.com/@KyleLiao/soundboard-1"
-          >Kyle's Motivational Soundboard</a
-        >
-      </ul>
       <p>
-        Will add, categorize, and order projects soon. Check devpost, github,
-        and replit.
+        <a href="https://drive.google.com/file/d/1cSeurPV_tm80nvvQdh_KbzWW88FxgC5y/view?usp=sharing"> <b>Maker Portfolio.</b></a> <br>
+        <i>My code is scattered between github, devpost, replit, and more. My maker portfolio has what I think are my coolest projects though!</i> 
       </p>
+      <br><br>
+      <a href = "/site">Home</a>
     </div>
   </body>
 </html>
